[tool.poetry]
name = "fastapi-inject"
version = "0.1.0"
description = "A simple tool to enhance FastAPI's 'Depends' functionality. Enables usage of 'Depends' outside of endpoints or sub-dependencies."
authors = ["Chobshaw <cameron.helsby@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
